--- a/package.json
+++ b/package.json
@@ -1,62 +1,95 @@
 {
-  "name": "storybook-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.34",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "storybook dev -p 6006",
-    "build": "storybook build",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=chpt_72a704214a58661"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest",
-      "plugin:storybook/recommended"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.22.2",
-    "@babel/preset-react": "^7.22.0",
-    "@babel/preset-typescript": "^7.21.5",
-    "@storybook/addon-essentials": "^7.0.18",
-    "@storybook/addon-interactions": "^7.0.18",
-    "@storybook/addon-links": "^7.0.18",
-    "@storybook/blocks": "^7.0.18",
-    "@storybook/react": "^7.0.18",
-    "@storybook/react-webpack5": "^7.0.18",
-    "@storybook/testing-library": "^0.0.14-next.2",
-    "chromatic": "^6.17.4",
-    "eslint-plugin-storybook": "^0.6.12",
-    "prop-types": "^15.8.1",
-    "storybook": "^7.0.18"
-  },
-  "readme": "ERROR: No README data found!",
-  "_id": "storybook-app@0.1.0"
+	"name": "masr-storybook-app",
+	"version": "0.1.0",
+	"private": false,
+	"license": "MIT",
+	"typings": "dist/index.d.ts",
+	"main": "dist/index.js",
+	"repository": {
+		"url": "https://github.com/malejandrosr/storybook-app",
+		"type": "git"
+	},
+	"peerDependencies": {
+		"react": ">=16",
+		"typescript": ">=4.0.0"
+	},
+	"release": {
+		"branches": [
+			"main"
+		]
+	},
+	"files": [
+		"dist",
+		"src"
+	],
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^16.18.34",
+		"@types/react": "^18.2.7",
+		"@types/react-dom": "^18.2.4",
+		"react": ">=16",
+		"react-dom": "^18.2.0",
+		"typescript": ">=4.0.0",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "storybook dev -p 6006",
+		"build": "npm run clean && tsc && npm run copy-files",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"chromatic": "npx chromatic --project-token=chpt_72a704214a58661",
+		"clean": "rimraf dist/",
+		"copy-files": "copyfiles -u 1 src/**/*.css dist/"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest",
+			"plugin:storybook/recommended"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@babel/preset-env": "^7.22.2",
+		"@babel/preset-react": "^7.22.0",
+		"@babel/preset-typescript": "^7.21.5",
+		"@storybook/addon-essentials": "^7.0.18",
+		"@storybook/addon-interactions": "^7.0.18",
+		"@storybook/addon-links": "^7.0.18",
+		"@storybook/blocks": "^7.0.18",
+		"@storybook/react": "^7.0.18",
+		"@storybook/react-webpack5": "^7.0.18",
+		"@storybook/testing-library": "^0.0.14-next.2",
+		"chromatic": "^6.17.4",
+		"copyfiles": "^2.4.1",
+		"eslint-plugin-storybook": "^0.6.12",
+		"prop-types": "^15.8.1",
+		"rimraf": "^5.0.1",
+		"semantic-release": "^21.0.2",
+		"storybook": "^7.0.18"
+	},
+	"plugins": [
+		"@semantic-release/commit-analyzer",
+		"@semantic-release/release-notes-generator",
+		"@semantic-release/changelog",
+		"@semantic-release/github",
+		"@semantic-release/npm",
+		"@semantic-release/git"
+	],
+	"readme": "ERROR: No README data found!",
+	"_id": "storybook-app@0.1.0"
 }
